<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/title_bottom_border">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="finish"
            android:src="@drawable/ic_back_black_24dp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="title"
            android:text="@string/edit_title"
            android:textColor="#4a4a4a"
            android:textSize="18sp"
            tools:ignore="HardcodedText"/>

        <ImageView
            android:id="@+id/ic_done"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="done"
            android:src="@drawable/ic_done_black_24dp"
            tools:ignore="HardcodedText"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="#6a6a6a"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_account"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#3e3e3e"
            android:textSize="16sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#6a6a6a"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#3e3e3e"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="#6a6a6a"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edit_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_type"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#3e3e3e"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#6a6a6a"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="#3e3e3e"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_save_bg"
        android:text="@string/edit_save"
        android:textColor="#fff"
        android:textSize="15sp"/>


</android.support.v7.widget.LinearLayoutCompat>