<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    tools:ignore="UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_type_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_tip"
            android:textColor="#9b9b9b"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_type_tip"
            android:textColor="#4b4b4b"
            android:textSize="20sp"
            tools:text="淘宝网"/>


        <TextView
            android:id="@+id/tv_account_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type_tip"
            android:layout_marginTop="10dp"
            android:text="@string/account_tip"
            android:textColor="#9b9b9b"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type_tip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tv_account_tip"
            android:textColor="#4b4b4b"
            android:textSize="20sp"
            tools:text="若兰明月"/>

        <TextView
            android:id="@+id/tv_phone_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_account_tip"
            android:layout_marginTop="10dp"
            android:text="@string/phone_type"
            android:textColor="#9b9b9b"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_account_tip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tv_phone_tip"
            android:textColor="#4b4b4b"
            android:textSize="20sp"
            tools:text="13718998774"/>


        <TextView
            android:id="@+id/tv_stars_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone_tip"
            android:layout_marginTop="10dp"
            android:text="@string/password_tip"
            android:textColor="#9b9b9b"
            android:textSize="20sp"/>


        <RatingBar
            android:id="@+id/rb_star"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone_tip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/tv_stars_tip"
            android:numStars="5"
            android:rating="3"
            android:theme="@style/RatingBar_CustomColor"/>


        <ImageView
            android:id="@+id/iv_copy"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_content_copy_black_24dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/iv_copy"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_copy"
            android:textSize="18sp"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>